<resources>
    <string name="app_name">Navigate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"> Kaushalya Senarathna</string>
    <string name="nav_header_subtitle">kaushalyasenarathna54@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_About">About</string>
    <string name="menu_Help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_add">Add Hotels</string>
    <string name="menu_manage">Manage Hotels</string>


    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>