<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    tools:context=".Register"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/register" />

            <EditText
                android:id="@+id/travellerName"
                style="@style/modifiedEditText"
                android:hint="Name"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginTop="@dimen/signup_text_margin_top"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/travellerMobilNo"
                style="@style/modifiedEditText"
                android:hint="Mobile Number"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginTop="@dimen/signup_text_margin_top"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/travellerEmail"
                style="@style/modifiedEditText"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:layout_marginTop="@dimen/signup_text_margin_top"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


            <EditText
                android:id="@+id/travellerPassword"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_marginTop="@dimen/signup_text_margin_top"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/register_button"
                style="@style/loginButton"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:onClick="registerTraveller"
                android:text="Register" />

        <TextView
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:minHeight="48dp"
            android:onClick="viewLoginForm"
            android:text="@string/signup_login_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.v7.widget.CardView>