<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">



    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="Login"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/loginEmail"
                style="@style/modifiedEditText"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/loginPassword"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/viewParent"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:minHeight="48dp"
            android:text="Forgot Password?"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize" />

        <Button
            android:id="@+id/login_button"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="Login" />

        <TextView
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:minHeight="48dp"
            android:onClick="viewRegisterClicked"
            android:text="@string/login_signup_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />


    </LinearLayout>
</android.support.v7.widget.CardView>